<resources>
    <string name="app_name">ShareNShop</string>


    <!--    Strings irrespective of the language-->
    <!--    Strings related to SharedPreferences-->
    <string name="shared_pref_theme">Theme</string>
    <string name="shared_pref_language">Language</string>

    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="zero">0</string>
    <string name="favourite_post_icon">Favourite post icon</string>


    <!--    Strings related to NewPostFragment-->
    <string name="new_post_title_error">Please provide a title!</string>
    <string name="new_post_amount_error">Please add some amount!</string>
    <string name="new_post_days_error">Please mention no of days/months/years!</string>
    <string name="new_post_months_error">Please mention no of months!</string>
    <string name="new_post_years_error">Please mention no of years!</string>
    <string name="new_post_people_error">Please mention people requirement!</string>
    <string name="new_post_post_successful">Posted Successfully :)</string>
    <string name="new_post_post_failure">Unable to post at this moment :(</string>


    <string name="x_people">X People</string>
    <string name="time">Time</string>
    <string name="rs_xyz">Rs. XYZ</string>
    <string name="picture_of_post_owner">Picture of post owner</string>

    <string name="db_fetch_error">Unable to fetch your data :(</string>


    <!--    Strings related to views-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_using_email">Sign Up using Email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="empty_email_error">Provide an email address!</string>
    <string name="failed_auth_error">Unable to establish your identity :(</string>

    <string name="themeHeading">Theme</string>
    <string name="languageHeading">Language</string>
    <string name="home">Home</string>
    <string name="new_post">New Post</string>
    <string name="account">Account</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="system_default">System Default</string>
    <string name="my_profile">My Profile</string>
    <string name="posts_history">Posts History</string>
    <string name="logout">Logout</string>
    <string name="post_title">Post Title</string>
    <string name="amount_in_rs">Amount (in Rs.)</string>
    <string name="people_required_text">People Required</string>
    <string name="days">Days</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="describe_your_post">Describe your Post</string>
    <string name="post">Post</string>
    <string name="post_status">Post Status</string>


    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Retype Password</string>
    <string name="email_not_verified">You need to verify your email first. Check your mail for the verification link!</string>
    <string name="comments">Comments</string>
    <string name="people_interested">People\nInterested</string>
    <string name="people_added">People\nAdded</string>
    <string name="description">Description:</string>
    <string name="none">None</string>
    <string name="comment_goes_here">Comment goes here ..</string>
    <string name="user_name">User name</string>
    <string name="picture_of_user">Picture of user</string>
    <string name="add_a_new_comment">Add a New Comment</string>
    <string name="enter_your_comment">Enter Your Comment</string>
    <string name="your_comment_goes_here">Your comment goes here ..</string>
    <string name="description_of_the_post">Description of the post</string>


    <string name="sort_button">SORT</string>
    <string name="filter_button">FILTER</string>
    <string name="amount_text">Amount</string>
    <string name="filter_amount_less_than_1000">less than 1000</string>
    <string name="filter_amount_1000_to_5000">1000 to 5000</string>
    <string name="filter_amount_5001_to_10000">5001 to 10000</string>
    <string name="filter_amount_greater_than_10000">greater than 10000</string>
    <string name="people_req_filter_less_than_3">less than 3</string>
    <string name="people_req_filter_3_to_5">3 to 5</string>
    <string name="people_req_filter_6_to_10">6 to 10</string>
    <string name="people_req_filter_greater_than_10">greater than 10</string>
    <string name="last_activity_text">Last Activity</string>
    <string name="last_activity_filter_less_than_1_month">less than 1 month</string>
    <string name="last_activity_filter_1_month_to_6_months">1 month to 6 months</string>
    <string name="last_activity_filter_6_months_to_1_year">6 months to 1 year</string>
    <string name="last_activity_filter_greater_than_1_year">greater than 1 year</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="ask_for_final_confirmation">Ask for Final Confirmation</string>
    <string name="user_accepted_the_final_confirmation">User accepted the final confirmation</string>
    <string name="button_to_approve_user">Button to approve user</string>
    <string name="button_to_reject_user">Button to reject user</string>
    <string name="in_progress">In Progress ..</string>
    <string-array name="sort_tags">
        <item>"Amount"</item>
        <item>"People Required"</item>
        <item>"Last Activity"</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_message">Notification Message</string>
    <string name="unread_notification">Unread notification</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="your_name">Your Name</string>
    <string name="name_">Name:</string>
    <string name="email_">Email:</string>
    <string name="your_email_email_com">youremail@email.com</string>
    <string name="new_password">New Password:</string>
    <string name="current_password">Current Password:</string>
    <string name="update_profile">Update Profile</string>
    <string name="reset">Reset</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="reset_link_mailed">Reset Link mailed !</string>

    <string name="want_to_accept">Want to Accept ?</string>
    <string name="include_me">Include Me</string>
    <string name="mark_all_as_read">Mark All As Read</string>
    <string name="please_select_a_post_from_the_left">Please select a Post from the left !</string>
    <string name="button_to_edit_the_post">Button to edit the post</string>
</resources>