<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AccountFragment"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/themeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/themeHeading"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <RadioGroup
                android:id="@+id/themeOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                app:layout_constraintTop_toBottomOf="@id/themeTextView"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/lightTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/light_theme" />

                <RadioButton
                    android:id="@+id/darkTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/dark_theme" />

                <RadioButton
                    android:id="@+id/defaultTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/system_default" />

            </RadioGroup>

            <TextView
                android:id="@+id/languageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/languageHeading"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="20dp"
                app:layout_constraintTop_toBottomOf="@id/themeOptions"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <RadioGroup
                android:id="@+id/languageOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                app:layout_constraintTop_toBottomOf="@id/languageTextView"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/englishLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/english" />

                <RadioButton
                    android:id="@+id/hindiLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/hindi" />

            </RadioGroup>

            <Button
                android:id="@+id/profileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="60dp"
                android:text="@string/my_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/languageOptions"
                android:background="@drawable/gradient_long_button_bg"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/postsHistoryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/posts_history"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileButton"
                android:background="@drawable/gradient_long_button_bg"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="25dp"
                android:text="@string/logout"
                android:textStyle="bold"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postsHistoryButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/gradient_long_button_bg"
                app:backgroundTint="@null" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>