<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshPost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/postInfoDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="2dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:circularflow_radiusInDP="12dp"
                        android:contentDescription="@string/picture_of_post_owner"
                        android:src="@drawable/default_person_icon"/>

                    <TextView
                        android:id="@+id/postTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/post_title"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_marginStart="20dp"
                        app:layout_constraintStart_toEndOf="@id/imageView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/imageView"
                        app:layout_constraintBottom_toBottomOf="@id/imageView"/>

                    <TextView
                        android:id="@+id/postAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rs_xyz"
                        app:layout_constraintEnd_toStartOf="@id/postTime"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/postTime"
                        app:layout_constraintBottom_toBottomOf="@id/postTime"
                        android:textSize="15sp"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/postTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/time"
                        app:layout_constraintEnd_toStartOf="@id/postPeople"
                        app:layout_constraintStart_toEndOf="@id/postAmount"
                        app:layout_constraintTop_toBottomOf="@id/postTitle"
                        android:textSize="15sp"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/postPeople"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/x_people"
                        app:layout_constraintStart_toEndOf="@id/postTime"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/postTime"
                        app:layout_constraintBottom_toBottomOf="@id/postTime"
                        android:textSize="15sp"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/descriptionHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/postTime"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/description"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/postDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/descriptionHeading"
                        android:minHeight="40dp"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:text="@string/none"
                        android:gravity="center"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/postInfoDetails"
                app:tabMode="fixed"
                android:layout_marginTop="5dp">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/people_interested"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/people_added"/>
            </com.google.android.material.tabs.TabLayout>

            <FrameLayout
            android:id="@+id/recyclerViewFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>