<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp"
    android:elevation="8dp"
    app:cardElevation="8dp"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:circularflow_radiusInDP="12dp"
            android:contentDescription="@string/picture_of_post_owner"
            android:src="@drawable/default_person_icon"/>

        <TextView
            android:id="@+id/postTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/post_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintEnd_toStartOf="@id/favouriteIcon"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="@id/imageView"/>

        <ImageView
            android:id="@+id/favouriteIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/filled_star_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/favourite_post_icon"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"/>

        <ProgressBar
            android:id="@+id/favProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/favouriteIcon"
            app:layout_constraintEnd_toEndOf="@id/favouriteIcon"
            app:layout_constraintStart_toStartOf="@id/favouriteIcon"
            app:layout_constraintBottom_toBottomOf="@id/favouriteIcon"
            style="?android:attr/progressBarStyleSmall"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/postAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rs_xyz"
            app:layout_constraintEnd_toStartOf="@id/postTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/postTime"
            app:layout_constraintBottom_toBottomOf="@id/postTime"
            android:textSize="15sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/postTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/time"
            app:layout_constraintEnd_toStartOf="@id/postPeople"
            app:layout_constraintStart_toEndOf="@id/postAmount"
            app:layout_constraintTop_toBottomOf="@id/postTitle"
            android:textSize="15sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/postPeople"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/x_people"
            app:layout_constraintStart_toEndOf="@id/postTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/postTime"
            app:layout_constraintBottom_toBottomOf="@id/postTime"
            android:textSize="15sp"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>