<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/userName"
            app:layout_constraintBottom_toBottomOf="@id/userName"
            app:circularflow_radiusInDP="12dp"
            android:contentDescription="@string/picture_of_user"
            android:src="@drawable/default_person_icon"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/userImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/userImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userName"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/comment_goes_here"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>